[IT-2237] New style for h2 headings. Fixed spacing between h2 heading and conten in older cards.

--- a/frontend/src/styles/fonts.scss
+++ b/frontend/src/styles/fonts.scss
@@ -7,3 +7,12 @@ h1 {
   color: $color-text-normal;
   margin: 0 0 20px 10px;
 }
+
+h2 {
+  font: {
+    size: 18px;
+    weight: bold;
+  }
+  color: $color-text-normal;
+  margin: 0 0 20px 0;
+}
