--- a/grails-app/assets/stylesheets/cards.less
+++ b/grails-app/assets/stylesheets/cards.less
@@ -27,25 +27,13 @@
 .card {
   .clearfix();
 
-  h2 {
-    display: block;
-    width: 100%;
-    padding: 0;
-    margin: 0 0 @line-height-computed 0;
-    font-size: (@font-size-base * 1.5);
-    line-height: inherit;
-    color: @legend-color;
-    border: 0;
-    border-bottom: 1px solid @legend-border-color;
-  }
-
   .tab-content {
     margin: 0 0 15px 0;
   }
 }
 
 .card > .nav {
-  margin-bottom: @line-height-computed;
+  margin-bottom: 8px;
 }
 
 .card > .nav li a {
